# mm-drone-ai-code

./: CMakeLists.txt  README.md
acu/: CMakeLists.txt
acu/include/: Config.hpp
acu/include/communication/: CommunicationManager.hpp
acu/include/control/: FlightController.hpp  PWMController.hpp
acu/include/sensors/: GPS.hpp  MPU6050.hpp  SensorManager.hpp  Ultrasonic.hpp
acu/include/state/: StateMachine.hpp
acu/src/: main.cpp
acu/src/communication/: CommunicationManager.cpp
acu/src/control/: FlightController.cpp  PWMController.cpp
acu/src/sensors/: GPS.cpp  MPU6050.cpp  SensorManager.cpp  Ultrasonic.cpp
acu/src/state/: StateMachine.cpp
common/: CMakeLists.txt
common/include/: Config.hpp
common/include/protocol/: Packet.hpp  Types.hpp
common/include/utils/: CircularBuffer.hpp  Timer.hpp
common/include/wifi/: WiFiSetup.hpp
common/src/protocol/: Packet.cpp
common/src/wifi/: WiFiSetup.cpp
docs/: communication_system_design.md  drone_state_machine.md  flight_control_system.md  initialization_process.md  sensor_and_telemetry_system.md  udp_protocol_specification.md  wifi_setup_process.md  wiring_diagrams.md
gcu/: CMakeLists.txt
gcu/include/: GCUApplication.hpp
gcu/include/communication/: CommunicationManager.hpp
gcu/include/control/: InputManager.hpp  Joystick.hpp
gcu/include/ui/: AttitudeWidget.hpp  ControlWidget.hpp  MainWindow.hpp  TelemetryWidget.hpp
gcu/src/: GCUApplication.cpp  main.cpp
gcu/src/communication/: CommunicationManager.cpp
gcu/src/control/: InputManager.cpp  Joystick.cpp
